--- a/styles/lp-styles.css
+++ b/styles/lp-styles.css
@@ -57,8 +57,9 @@ header p {
 .frame-vsl {
   border: 2px solid var(--vermelho);
   width: 800px;
-  height: 500px;
+  height: 450px;
   z-index: 1000;
+  border-radius: 20px;
 }
 
 /* onda */
