--- a/styles/lp-styles.css
+++ b/styles/lp-styles.css
@@ -426,6 +426,12 @@ footer p {
   }
 }
 
+@media (min-width: 900px) {
+  .finalidade-produto {
+    margin-top: -50px;
+  }
+}
+
 /* Garantia */
 
 @media (max-width: 810px) {
