--- a/styles/lp-styles.css
+++ b/styles/lp-styles.css
@@ -461,6 +461,20 @@ footer p {
   }
 }
 
+@media (max-width: 268px) {
+  .garantia-image {
+    width: 100%;
+  }
+}
+
+/* Perguntas Frequentes */
+
+@media (max-width: 290px) {
+  .title {
+    font-size: 40px !important;
+  }
+}
+
 /* Footer btn */
 
 @media (max-width: 800px) {
