Ajustes margin-top 09/03/2023

--- a/styles/lp-styles.css
+++ b/styles/lp-styles.css
@@ -528,6 +528,12 @@ footer p {
   }
 }
 
+@media (min-width: 960px) {
+  .finalidade-produto {
+    margin-top: -50px;
+  }
+}
+
 /* Garantia */
 
 @media (max-width: 810px) {
