--- a/styles/lp-styles.css
+++ b/styles/lp-styles.css
@@ -4,7 +4,7 @@
   --rosafraco: #ff86c8;
   --texto: #2b282a;
   --vermelho: rgb(255, 76, 76);
-  --bg: #fff8dc;
+  --bg: #ffd4db;
   --azul: #30706f;
 }
 
