Mudança de ordem dos elementos 10/03/2023

--- a/styles/lp-styles.css
+++ b/styles/lp-styles.css
@@ -561,7 +561,7 @@ footer p {
 
 @media (max-width: 850px) {
   .checks-e-device {
-    flex-direction: column;
+    flex-direction: column-reverse;
     margin-bottom: 40px;
   }
 
