--- a/styles/lp-styles.css
+++ b/styles/lp-styles.css
@@ -24,6 +24,7 @@ body::-webkit-scrollbar-thumb {
   --vermelho: rgb(255, 76, 76);
   --bg: #ffd4db;
   --azul: #30706f;
+  --vermelhoescuro: rgb(130, 44, 44);
 }
 
 * {
@@ -221,6 +222,90 @@ header p {
   margin-top: -60px;
   margin-bottom: -60px;
   width: 350px;
+}
+
+/* Depoimentos */
+
+.depoimentos-container {
+  display: flex;
+  margin-bottom: 50px;
+  justify-content: center;
+}
+
+.depoimentos-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.depoimento-heading {
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: var(--vermelho);
+  color: transparent;
+  font-size: 50px;
+  line-height: 30px;
+  text-align: center;
+}
+
+.sub-depoimento-heading {
+  text-align: center;
+  font-weight: 900;
+  font-size: 40px;
+}
+
+.dp-card01 {
+  background-color: var(--bg);
+  width: 300px;
+  height: 250px;
+  padding: 50px 30px;
+  border-top-left-radius: 70px;
+  border-bottom-right-radius: 70px;
+  box-shadow: 0px 8px 14px -6px rgba(0,0,0,0.75);
+  margin-left: 80px;
+  display: flex;
+}
+
+.card-semmargin {
+  margin-left: 40px; 
+}
+
+.dp-card01-texts {
+  display: flex;
+  align-items: center;
+}
+
+.dp-card01-texts p {
+  letter-spacing: -1px;
+}
+
+.dp-card01-texts h1 {
+  font-size: 20px;
+  font-weight: 900;
+  letter-spacing: -1px;
+  color: var(--vermelhoescuro);
+}
+
+.dp-card01-infos {
+  display: flex;
+  flex-direction: column;
+  margin-top: 11px;
+}
+
+.depoimento-foto {
+  width: 110px;
+  height: 110px;
+  border-radius: 100%;
+  margin: 0 20px 0 -80px;
+  margin-left: -80px;
+  padding: 8px;
+  background-color: var(--bg);
+}
+
+.depoimento-stars {
+  margin-top: 10px;
+  width: 60%;
+  opacity: 20%;
 }
 
 /* Oferta */
@@ -658,6 +743,37 @@ footer p {
 @media (max-width: 268px) {
   .garantia-image {
     width: 100%;
+  }
+}
+
+/* Depoimentos */
+
+@media (max-width: 780px) {
+  .depoimentos-container {
+    flex-direction: column;
+  }
+
+  .card-semmargin {
+    margin: 0;
+  }
+
+  .card-mg-top {
+    margin: 0;
+    margin-top: 20px;
+  }
+
+  .dp-card01 {
+    margin-left: 50px;
+  }
+}
+
+@media (max-width: 397px) {
+  .dp-card01 {
+    width: 80%;
+  }
+
+  .depoimento-heading {
+    font-size: 40px !important;
   }
 }
 
