--- a/styles/lp-styles.css
+++ b/styles/lp-styles.css
@@ -228,7 +228,7 @@ header p {
 
 .depoimentos-container {
   display: flex;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   justify-content: center;
 }
 
@@ -306,6 +306,10 @@ header p {
   margin-top: 10px;
   width: 60%;
   opacity: 20%;
+}
+
+.card-mg-bottom {
+  margin-bottom: 50px;
 }
 
 /* Oferta */
@@ -712,6 +716,10 @@ footer p {
     width: 292px;
     margin: -34px 0;
   }
+
+  .garantia {
+    margin-top: 50px;
+  }
 }
 
 @media (max-width: 720px) {
@@ -761,9 +769,17 @@ footer p {
     margin: 0;
     margin-top: 20px;
   }
+  
+  .card-mg-top2 {
+    margin-top: 10px;
+  }
 
   .dp-card01 {
     margin-left: 50px;
+  }
+
+  .card-mg-bottom {
+    margin-bottom: 50px !important;
   }
 }
 
@@ -774,6 +790,24 @@ footer p {
 
   .depoimento-heading {
     font-size: 40px !important;
+    line-height: 15px;
+  }
+}
+
+@media (max-width: 347px) {
+  .depoimento-foto {
+    width: 90px;
+    height: 90px;
+  }
+}
+
+@media (max-width: 300px) {
+  .depoimento-heading {
+    font-size: 35px !important;
+  }
+
+  .sub-depoimento-heading {
+    font-size: 30px;
   }
 }
 
