--- a/styles/lp-styles.css
+++ b/styles/lp-styles.css
@@ -55,7 +55,7 @@ body::-webkit-scrollbar-thumb {
   letter-spacing: -1px;
 }
 
-#colocarGeo {
+#city {
   color: var(--vermelho);
   letter-spacing: -1px;
   
