--- a/styles/lp-styles.css
+++ b/styles/lp-styles.css
@@ -46,13 +46,19 @@ body::-webkit-scrollbar-thumb {
 .loc {
   background-color: #242424;
   width: 100%;
-  height: 40px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .loc p {
   color: white;
   font-size: 15px;
   letter-spacing: -1px;
+  line-height: 15px;
+  margin: 0;
+  text-align: center;
 }
 
 #city {
