Ajustes no texto da carta de venda 02/05/2023

--- a/styles/lp-styles.css
+++ b/styles/lp-styles.css
@@ -78,7 +78,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: #ffd4db;
+  background: #ffeaee; /* #ffd4db */
   padding-bottom: 10px;
 }
 
