Ajustes no texto da carta de venda 03/05/2023

--- a/styles/lp-styles.css
+++ b/styles/lp-styles.css
@@ -690,6 +690,10 @@ footer p {
     margin-bottom: 20px;
     letter-spacing: -1px;
   }
+
+  .enfase-black {
+    letter-spacing: -0.5px;
+  }
 }
 
 /* Mockup */
